<resources>
    <string name="app_name">MyMusic</string>
    <string name="btn_prev">上一首</string>
    <string name="btn_next">下一首</string>
    <string name="btn_playstop">开始/暂停</string>
    <string name="btn_mode">列表循环</string>
    <string name="zero">00:00</string>
    <string name="notification_message">正在播放音乐</string>
    <string name="ticker_text">aa</string>
    <string name="nosong">当前列表中没有音乐</string>
</resources>
