<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzy.mymusic.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/musiclist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/seekbar"
            android:gravity="center"
            android:text="@string/zero"
            android:id="@+id/nowtime" />

        <SeekBar
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:id="@+id/seekbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/seekbar"
            android:gravity="center"
            android:text="@string/zero"
            android:id="@+id/alltime"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/songinfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/nosong"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prev"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_playstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_playstop"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_mode"
            style="?android:attr/buttonBarButtonStyle"/>



    </LinearLayout>

</LinearLayout>
